[package]
name = "images"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tar = "0.4"
flate2 = { version = "1.1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.1"
anyhow = "1.0"

tugfile = {path = "../tugfile"}